<resources>
    <string name="app_name">阿童目</string>
    <string name="login">登录</string>
    <string name="login_phone">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_register">现在注册</string>
    <string name="login_forget_pwd">忘记密码？</string>
    <string name="loading">正在加载...</string>
    <string name="verification_time">获取验证码</string>
    <string name="verification_tip">验证码30分钟内有效</string>
    <string name="verification_problem">收不到验证码？</string>
    <string name="confirm">确认</string>
    <string name="agreement_tip">点击确认表示同意</string>
    <string name="agreement">用户协议</string>
    <string name="verification_code">验证码</string>
    <string name="agreement_url">https://www.atongmu.net:8443/backwork/rest/kig/restShowProvision</string>
    <string name="code_empty">验证码不能为空</string>
    <string name="code_error">验证码错误</string>
    <string name="code_send_success">验证码发送成功</string>
    <string name="code_send_error">验证码发送失败</string>
    <string name="input_phone">输入手机号</string>
    <string name="chinese_phone_code">中国大陆+86</string>
    <string name="next">下一步</string>
    <string name="have_account_gologin">已有账号      去登录 >></string>
    <string name="register">注册</string>
    <string name="register_phone">注册手机号</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="empty_phone">手机号不能为空</string>
    <string name="error_phone">请输入正确的手机号</string>
    <string name="new_password">新密码</string>
    <string name="new_password_tip">6-12个字符，为字母、数字</string>
    <string name="new_password_confirm">确认新密码</string>
    <string name="net_error">网络异常</string>
    <string name="reset_pwd_error">重置密码失败</string>
    <string name="input_difference">两次输入不一致</string>
    <string name="empty_pwd">密码不能为空</string>
    <string name="go_login">去登录</string>
    <string name="pwd_change_finish">密码修改成功啦！</string>
    <string name="account">账号</string>
    <string name="register_finish">阿童目注册成功啦！</string>
    <string name="kindergarten">幼儿园</string>
    <string name="im">留言</string>
    <string name="find">发现</string>
    <string name="life_circle">生活圈</string>
    <string name="me">我的</string>
    <string name="notice">通知</string>
    <string name="activity">活动</string>
    <string name="news">新闻</string>
    <string name="pick_up_waiting">代接</string>
    <string name="date_error">数据加载失败</string>
    <string name="cancel">取消</string>
    <string name="qq">QQ</string>
    <string name="qqzone">空间</string>
    <string name="wechat">微信</string>
    <string name="wechat_circle">圈子</string>
    <string name="sign_waiting_confirm">确认代接</string>
    <string name="contact_teacher">联系老师</string>
    <string name="sign_wait_confirm">确认代接</string>
    <string name="sign_waiting_create">发布代接</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="is_confirm_sign_up">是否确认代接？</string>
    <string name="activity_register">报名</string>
    <string name="homework">作业</string>
    <string name="course">课程</string>
    <string name="last_week">上周</string>
    <string name="this_week">本周</string>
    <string name="next_week">下周</string>
    <string name="mon">上</string>
    <string name="noon">午</string>
    <string name="aft">下</string>
    <string name="no_finish">未完成</string>
    <string name="finish">已完成</string>
    <string name="finish_homework">完成作业</string>
    <string name="commit">提交</string>
    <string name="homework_describe">作业文字描述</string>
    <string name="read_more">查看更多</string>
    <string name="browse_size">浏览</string>
    <string name="vote_error">点赞失败</string>
    <string name="num_remark">条评论</string>
    <string name="circle_fifty">+50</string>
    <string name="release_homework">发布作业</string>
    <string name="start_record">按下开始录制</string>
    <string name="stop_record">松开完成录制</string>
    <string name="get_camera_permission_error">系统相机权限获取失败</string>
    <string name="get_audio_permission_error">系统麦克风权限获取失败</string>
    <string name="pick_photo_error">选择图片失败</string>
    <string name="photo_size_nine">图片最多添加九张</string>
    <string name="get_sd_permission_error">获取SD卡权限失败</string>
    <string name="sd_mounted_error">获取SD卡失败</string>
    <string name="all_image">全部图片</string>
    <string name="no_picture">没有图片</string>
    <string name="picture_select">图片选择</string>
    <string name="album_select">图库选择</string>
    <string name="photo_select_max">图片选择已满</string>
    <string name="family">家人</string>
    <string name="gardener">园丁</string>
    <string name="at_your_in_group">%s在群聊中@了你</string>
    <string name="group_member">成员</string>
    <string name="is_call_phone">是否拨打电话</string>
    <string name="get_phone_permission_error">获取拨打电话权限失败</string>
    <string name="time_album">时光相册</string>
    <string name="morn_check_album">晨检照片</string>
    <string name="time_video_live">直播时间段：</string>
    <string name="video_live">视频</string>
    <string name="video_play_error">视频播放失败</string>
    <string name="continue_play">继续播放</string>
    <string name="video_device_time_error">当前设备不在播放时间内</string>
    <string name="device_offline">设备离线</string>
    <string name="no_school_car">无校车</string>
    <string name="ask_for_leave">请假</string>
    <string name="unarrived">未签到</string>
    <string name="personalleave">事假</string>
    <string name="sickleave">病假</string>
    <string name="late">迟到</string>
    <string name="sign_record_num">本月签到</string>
    <string name="day">天</string>
    <string name="today">今天</string>
    <string name="future">未来不可查看</string>
    <string name="selected">选中</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="leave_remark">备注描述</string>
    <string name="leave_start_time">请假开始时间</string>
    <string name="leave_end_time">请假结束时间</string>
    <string name="submit_ask_for_leave">提交假条</string>
    <string name="teacher_phone">联系方式：</string>
    <string name="teach_class">教学班级：</string>
    <string name="pay_record">缴费记录</string>
    <string name="pay_notice">缴费通知</string>
    <string name="go_pay">去缴费</string>
    <string name="remark">备注</string>
    <string name="disbursements">实付款</string>
    <string name="confirm_pay">确认支付</string>
    <string name="select_pay_type">请先选择支付方式</string>
    <string name="cancel_register">取消报名</string>
    <string name="input_remark">请输入备注信息：</string>
    <string name="submit_sign">提交报名</string>
    <string name="save_image">保存</string>
    <string name="please_select_photo">请先选择照片</string>
    <string name="give_up">确认放弃当前操作？</string>
    <string name="order_id">订单编号</string>
    <string name="pay_name">付款人</string>
    <string name="pay_type">付款方式</string>
    <string name="pay_to_object">付款对象</string>
    <string name="pay_time">缴费时间</string>
    <string name="pay_content">缴费内容</string>
    <string name="order_price">缴费金额</string>
    <string name="pay_error">支付失败</string>
    <string name="pay_waiting">支付结果确认中</string>
    <string name="pay_success">支付成功</string>
    <string name="edit">编辑</string>
    <string name="gold">金币</string>
    <string name="medal">勋章</string>
    <string name="fans">粉丝</string>
    <string name="favorite">收藏</string>
    <string name="my_home">我的主页</string>
    <string name="points">积分</string>
    <string name="red_flower">红花</string>
    <string name="class_circle">班级圈子</string>
    <string name="self_notice">个人提醒</string>
    <string name="shuttle_photo">接送照片</string>
    <string name="account_change">账号切换</string>
    <string name="recharge">充值专享</string>
    <string name="growth_profile">成长档案</string>
    <string name="feedback">意见反馈</string>
    <string name="use_help">使用帮助</string>
    <string name="send_to_atom">写给阿童目</string>
    <string name="send_to_garten">园长信箱</string>
    <string name="record">记录</string>
    <string name="confirm_clean_empty">是否确认清空</string>
    <string name="camera">拍照</string>
    <string name="pick_from_album">从相册中选择</string>
    <string name="up_video">上传视频</string>
    <string name="wx_app_id">wx7a4a3e22cae881f5</string>
    <string name="news_notice">消息提醒</string>
    <string name="pwd_change">修改登录密码</string>
    <string name="im_empty">清空聊天记录</string>
    <string name="clean_cache">缓存清理</string>
    <string name="local_version">当前版本</string>
    <string name="about_us">关于我们</string>
    <string name="atom_setting">设置</string>
    <string name="login_out">退出登录</string>
    <string name="clean_cache_finish">缓存已清除</string>
    <string name="confirm_clean_cache">确认清除缓存？</string>
    <string name="save_image_success">保存图片成功</string>
    <string name="save_image_fail">保存图片失败</string>
    <string name="school_car_status">校车动态</string>
    <string name="empty">清空</string>
    <string name="feedback_record">反馈记录</string>
    <string name="feedback_success">提交完成,您可以在记录中查看您的意见反馈</string>
    <string name="function_introduction">功能介绍</string>
    <string name="problem_help">问题帮助</string>
    <string name="grow_profile_no_data">成长档案每学期发送一次\n不要急，宝宝的档案还在路上</string>
    <string name="use_normal">正常使用</string>
    <string name="use_loss">挂失</string>
    <string name="sign_in_card">签到卡</string>
    <string name="open_profile">打开档案</string>
    <string name="grow_profile_title">您有 %1$s 份成长档案</string>
    <string name="shuttle_tip">上传照片背景不要太过杂乱，以免影响人物识别。</string>
    <string name="shuttle_need">需上传对应本人照片且面部五官不能有遮挡。</string>
    <string name="please_correct_sign_card">请扫描正确的接送卡</string>
    <string name="shuttle_photo_tip">为了儿童接送安全，请上传真实有效的接送人近照</string>
    <string name="sign_in_card_edit">接送卡信息填写</string>
    <string name="confirm_up">确认上传吗？</string>
    <string name="photo_up_success">图片上传成功</string>
    <string name="atom_tel">400-008-1686</string>
    <string name="confirm_login_out">确认退出登录？</string>
    <string name="old_password">旧密码</string>
    <string name="old_pwd_error">旧密码输入错误</string>
    <string name="new_pwd_error">两次密码输入不一致</string>
    <string name="change_pwd_success">密码修改成功</string>
    <string name="change_pwd">修改密码</string>
    <string name="baby_info">宝宝信息</string>
    <string name="birthday_error">出生日期不能大于今天</string>
    <string name="recharge_record">充值订单</string>
    <string name="clean_im_finish">聊天记录已清除</string>
    <string name="clean_im_error">聊天记录清除失败</string>
    <string name="create">新建</string>
    <string name="day_of_medicine">吃药天数</string>
    <string name="create_new_reminder">新建吃药提醒</string>
    <string name="complete">完成</string>
    <string name="create_reminder_before_today">请假时间不能小于今天</string>
    <string name="change_success">修改成功</string>
    <string name="reminder_create_success">提醒上传成功</string>
    <string name="tip_of_eat_medicine">吃药提醒</string>
    <string name="post_file_error">上传文件失败</string>
    <string name="put_homework">提交作业</string>
    <string name="homework_commit_success">作业上传成功</string>
    <string name="list_no_data">空空如也，没有消息可看...</string>
    <string name="look_detail">查看详情</string>
    <string name="confirm_delete_homework">确认删除作业？</string>
    <string name="create_new_leave">新建请假单</string>
    <string name="release">发布</string>
    <string name="photo">照片</string>
    <string name="small_video">小视频</string>
    <string name="localtion">位置</string>
    <string name="qr_code_error">请扫描正确的二维码</string>
    <string name="user_info_error">用户信息错误</string>
    <string name="invite_family">邀请家人</string>
    <string name="invite_tip">邀请家人可以共同查看宝宝在\n幼儿园的成长状态</string>
    <string name="join_now">立即添加</string>
    <string name="unbind">未邀请</string>
    <string name="family_info">家人信息</string>
    <string name="reminder_activation">提醒激活</string>
    <string name="add">添加</string>
    <string name="add_family_sex">TA的性别</string>
    <string name="add_family_name">TA的名字</string>
    <string name="add_family_relation">TA是宝宝的</string>
    <string name="relation_with_family">与宝宝的关系</string>
    <string name="add_family_phone">TA的手机号</string>
    <string name="sms_notice">短信通知</string>
    <string name="wx_notice">微信通知</string>
    <string name="invite">邀 请</string>
</resources>