<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true"
    >
    <include layout="@layout/toolbar_text"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp">
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/icon_login_user"
                android:drawablePadding="10dp"
                android:inputType="number"
                android:textSize="15sp"
                android:hint="@string/input_phone"
                android:textColorHint="@color/colorFontHint"
                android:textColor="@color/colorFontBlack"
                android:layout_height="match_parent" />
            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@color/colorLineGray"/>
            <TextView
                android:layout_width="wrap_content"
                android:minWidth="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/colorMainYellow"
                android:text="@string/chinese_phone_code"/>
        </LinearLayout>
        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:background="@color/colorLineGray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp">
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/icon_verification"
                android:drawablePadding="10dp"
                android:inputType="number"
                android:textSize="15sp"
                android:hint="@string/verification_code"
                android:textColorHint="@color/colorFontHint"
                android:textColor="@color/colorFontBlack"
                android:layout_height="match_parent" />
            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@color/colorLineGray"/>
            <TextView
                android:id="@+id/tv_verification_time"
                android:layout_width="wrap_content"
                android:minWidth="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/colorMainYellow"
                android:text="@string/verification_time"/>
        </LinearLayout>
        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:background="@color/colorLineGray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="35dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorFontGray"
                android:text="@string/verification_tip"
                />
            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_no_get_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorFontBlack"
                android:text="@string/verification_problem"
                />
        </LinearLayout>
        <Button
            android:id="@+id/btn_register_next"
            android:textColor="@color/colorWhite"
            android:background="@drawable/login_btn_yellow"
            android:text="@string/next"
            android:layout_width="300dp"
            android:layout_height="44dp"/>
        <TextView
            android:id="@+id/tv_register_goLogin"
            android:layout_marginTop="19dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorFontBlack"
            android:text="@string/have_account_gologin"/>
    </LinearLayout>
</RelativeLayout>