<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:background="@color/colorWhite"
    android:navigationIcon="@drawable/icon_back_yellow"
    app:navigationIcon="@drawable/icon_back_yellow">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_title_notice"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:gravity="center_vertical"
            android:textColor="@color/notice_title_color"
            android:paddingLeft="2dp"
            android:layout_weight="1"
            android:text="@string/notice"/>
        <TextView
            android:id="@+id/tv_title_news"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:paddingLeft="2dp"
            android:gravity="center_vertical"
            android:textColor="@color/notice_title_color"
            android:layout_weight="1"
            android:text="@string/news"/>
        <TextView
            android:id="@+id/tv_title_activity"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:paddingLeft="2dp"
            android:gravity="center_vertical"
            android:textColor="@color/notice_title_color"
            android:layout_weight="1"
            android:text="@string/activity"/>
        <TextView
            android:id="@+id/tv_title_sign_up"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:paddingLeft="2dp"
            android:gravity="center_vertical"
            android:textColor="@color/notice_title_color"
            android:layout_weight="1"
            android:text="@string/pick_up_waiting"/>
    </LinearLayout>
</android.support.v7.widget.Toolbar>