<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/login_bg"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_login_username"
            android:drawableLeft="@drawable/icon_login_user"
            android:hint="@string/login_phone"
            android:textColor="@color/colorFontHint"
            android:inputType="number"
            android:textSize="15sp"
            android:drawablePadding="12dp"
            android:layout_width="300dp"
            android:layout_height="54dp" />
        <EditText
            android:id="@+id/et_login_password"
            android:drawableLeft="@drawable/icon_login_password"
            android:hint="@string/login_password"
            android:textColor="@color/colorFontHint"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:drawablePadding="12dp"
            android:layout_width="300dp"
            android:layout_height="54dp" />
        <Button
            android:id="@+id/btn_login_confirm"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:background="@drawable/login_btn_yellow"
            android:textSize="18sp"
            android:layout_marginTop="35dp"
            android:layout_width="300dp"
            android:layout_height="44dp" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="300dp"
            android:gravity="center"
            android:layout_marginTop="19dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_go_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/login_register"
                android:textColor="@color/colorFontBlack"/>
            <Space
                android:layout_width="154dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_go_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/login_forget_pwd"
                android:textColor="@color/colorFontBlack"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
