<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <FrameLayout
        android:id="@+id/fl_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </FrameLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/tv_bottom_home"
            android:drawableTop="@drawable/home_icon"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:layout_gravity="center"
            android:drawablePadding="5dp"
            android:textSize="10dp"
            android:layout_height="40dp"
            android:textColor="@color/home_color"
            android:text="@string/kindergarten"/>
        <TextView
            android:id="@+id/tv_bottom_im"
            android:drawableTop="@drawable/im_icon"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:layout_gravity="center"
            android:drawablePadding="5dp"
            android:textSize="10dp"
            android:layout_height="40dp"
            android:textColor="@color/home_color"
            android:text="@string/im"/>
        <TextView
            android:id="@+id/tv_bottom_find"
            android:drawableTop="@drawable/find_icon"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:layout_gravity="center"
            android:drawablePadding="5dp"
            android:textSize="10dp"
            android:layout_height="40dp"
            android:textColor="@color/home_color"
            android:text="@string/find"/>
        <TextView
            android:id="@+id/tv_bottom_life"
            android:drawableTop="@drawable/life_circle_icon"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:layout_gravity="center"
            android:drawablePadding="5dp"
            android:textSize="10dp"
            android:layout_height="40dp"
            android:textColor="@color/home_color"
            android:text="@string/life_circle"/>
        <TextView
            android:id="@+id/tv_bottom_me"
            android:drawableTop="@drawable/me_icon"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:layout_gravity="center"
            android:drawablePadding="5dp"
            android:textSize="10dp"
            android:layout_height="40dp"
            android:textColor="@color/home_color"
            android:text="@string/me"/>
    </LinearLayout>
</LinearLayout>
