<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tongxun.atongmu.parent.ui.login.AccountFinishActivity">
    <LinearLayout
        android:layout_above="@+id/btn_go_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="110dp"
        android:layout_width="300dp"
        android:gravity="center"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_register_finish"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/colorFontBlack"
                android:text="@string/register_finish"/>
            <TextView
                android:id="@+id/tv_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/colorFontBlack"
                android:text="@string/account"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_go_login"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:textSize="18sp"
        android:text="@string/go_login"
        android:layout_centerInParent="true"
        android:textColor="@color/colorWhite"
        android:background="@drawable/login_btn_yellow"/>
</RelativeLayout>